tests/script_errors/patch_non_str_key/error.txt
Error: 
    1 | patch event of
    2 |   insert "snot" => "badger",
    3 |   insert 7 => "snot"
      |          ^ Found the token `7` but expected one of `"`, `"""`
      |            NOTE: Did you mean to use a string?
    4 | end